Fixed overflow and added display none for full recepie page

--- a/scss/layout/_fullRecepieSection.scss
+++ b/scss/layout/_fullRecepieSection.scss
@@ -4,12 +4,16 @@
   display: flex;
   flex-direction: column;
   top: 0;
+  left: 0;
   padding: 2rem;
-  right: -100%;
+  // right: -100%;
   gap: .25rem;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   letter-spacing: -.5px;
+  &--none{
+    display: none;
+  }
   &__header{
     display: flex;
     align-items: center;
